# common-rules-server

./: .dockerignore  .dttcignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: 01_workflow.yml
src/common_rules_server/: __main__.py  mcp_server.py
src/common_rules_server/domain/: rule.py
src/common_rules_server/resources/artifacts/code_style/: checkstyle.xml  suppressions.xml
src/common_rules_server/resources/artifacts/templates/: compliance_confirmation.md  daily_logbook_summary.md  development_process.md  deviation_process.md  docs_generation_workflow.md  documentation_process.md  general_system_rule.md  java_code_style.md  main_orchestrator.md  notebook_management.md  project_architecture_compliance.md  tdd_process.md  test_cycle.md  verification_process.md
src/common_rules_server/resources/rules/system/: 01-general.mdc  01-orchestrator.mdc  01_general.md  01_orchestrator.md
src/common_rules_server/resources/rules/user/agentic/: daily_logbook_summary.md  daily_logbook_summary_rule.mdc
src/common_rules_server/resources/rules/user/auto-attached/: java_code_style.rule.mdc
src/common_rules_server/resources/rules/user/compliance/: project_architecture_compliance.md  project_architecture_compliance.rule.mdc
src/common_rules_server/service/: rule_service.py
src/common_rules_server/util/: rule_parsing.py
src/test/: test_integration_mcp_server.py  test_mcp_server_unit.py  test_rule_factory.py  test_rule_parsing.py  test_rule_service.py
tools/: debug_client.py
(+19 files in other folders)
